# cmake_example

./: CMakeLists.txt
src/MPI_STUBS/: mpi.h
